Added title/alt label to all images and links

--- a/public/features/about/about.html
+++ b/public/features/about/about.html
@@ -23,7 +23,7 @@
                     The settlement of Horsley can be dated back to 1066, when lands were granted to Troarn Abbey (Calvados, France).
                     At this time it consisted (amongst other things) of a Mill, 6 plough lands, a prior, a monk, a chaplain
                     (the three of whom founded 'Horsley Priory') and a knight (on horseback). You can read about the parish's history
-                    <a href="/glos#/history"><i>HERE</i></a><br>
+                    <a href="/glos#/history" title="Link to the history page on the Horsley Parish web site"><i>HERE</i></a><br>
                 </div>
             </div>
             <div class="flex-container flex-container-row">
@@ -39,7 +39,7 @@
                 <div flex style="margin-top: -20px;">
                     <a href="/glos/features/about/img/playground.jpg">
                         <h4>Horsley Playground Project</h4>
-                        <img src="/glos/features/about/img/playground_sm.jpg" width="220" height="114">
+                        <img src="/glos/features/about/img/playground_sm.jpg" width="220" height="114" title="Image of Horsley play ground">
                     </a>
                 </div>
                 <div flex>
@@ -50,13 +50,14 @@
                 </div>
                 <div flex>
                     <div class="ac-links">
-                        <a href="https://www.facebook.com/horsleyplayproject/">
+                        <a href="https://www.facebook.com/horsleyplayproject/" title="Link to the Hosrley Playground Project Facebook page">
                             <span><img src="/glos/img/facebook-icon-5.png" height="40" width="40"></span>
                             <span>Horsley Playground Project</span>
                         </a>
                     </div>
                     <div class="ac-links">
-                        <a href="http://www.stroudnewsandjournal.co.uk/news/15251397.Horsley_celebrating___55_000_play_project_completion_with_picnic_this_weekend/">
+                        <a href="http://www.stroudnewsandjournal.co.uk/news/15251397.Horsley_celebrating___55_000_play_project_completion_with_picnic_this_weekend/"
+                        title="Link to a Stroud News and Journal (local newspaper) article about the playground project">
                             <img src="/glos/features/about/img/NewsAndJournal.png"></a>
                     </div>
                 </div>
@@ -64,7 +65,7 @@
 
             <div class="flex-container flex-container-row ac-main-normal-txt" style="margin-top: 20px;">
                 <div flex style="margin-top: -20px;">
-                    <a href="/glos/features/about/img/3in1.png">
+                    <a href="/glos/features/about/img/3in1.png" title="image of the inside of St.Martin's Church, now a multi-function building referred to as the '3-in-1'">
                         <h4>Horsley '3in1' Project</h4>
                         <img src="/glos/features/about/img/3in1_sm.png">
                     </a>
@@ -77,7 +78,7 @@
                 </div>
                 <div flex>
                     <div class="ac-links">
-                        <a href="https://www.bbc.co.uk/news/uk-england-gloucestershire-12699619">
+                        <a href="https://www.bbc.co.uk/news/uk-england-gloucestershire-12699619" title="link to a BBC news article about the 3-in-1 project">
                             <img src="/glos/features/about/img/bbc.png"></a>
                     </div>
                 </div>
@@ -87,7 +88,8 @@
                 <div flex style="margin-top: -20px;">
                     <a href="/glos/features/about/img/shop.png">
                         <h4>Horsley Community Shop</h4>
-                        <img src="/glos/features/about/img/shop_sm.png" width="220" height="165">
+                        <img src="/glos/features/about/img/shop_sm.png" width="220" height="165"
+                             title="A few (of the many) local community shop volunteers pose for a photograph for the local newspaper (2017)">
                     </a>
                 </div>
                 <div flex>
@@ -99,13 +101,15 @@
                 </div>
                 <div flex>
                     <div class="ac-links">
-                        <a href="https://m.facebook.com/Horsley-Community-Shop-1386629328234315/?locale2=ro_RO">
-                            <span><img src="/glos/img/facebook-icon-5.png" height="40" width="40"></span>
-                            <span><img src="/glos/features/horsley-community-shop/img/title_white.jpg" width="150"/></span>
+                        <a href="https://m.facebook.com/Horsley-Community-Shop-1386629328234315/?locale2=ro_RO"
+                           title="Link to Horsley community shop facebook page">
+                            <span><img src="/glos/img/facebook-icon-5.png" height="40" width="40" aria-label="facebook icon"></span>
+                            <span><img src="/glos/features/horsley-community-shop/img/title_white.jpg" aria-label="community shop name/logo" width="150"/></span>
                         </a>
                     </div>
                     <div class="ac-links">
-                        <a href="http://www.stroudnewsandjournal.co.uk/news/15081964.Staff_at_Horsley_Community_Shop_celebrate_the_start_of_their_new_manager/">
+                        <a href="http://www.stroudnewsandjournal.co.uk/news/15081964.Staff_at_Horsley_Community_Shop_celebrate_the_start_of_their_new_manager/"
+                           title="Link to a Stroud News and Journal (local newspaper) article about Horsley community shop">
                             <img src="/glos/features/about/img/NewsAndJournal.png"></a>
                     </div>
                 </div>
@@ -113,7 +117,7 @@
 
             <div class="flex-container flex-container-row ac-main-normal-txt" style="margin-top: 20px;">
                 <div flex style="margin-top: -20px;">
-                    <a href="/glos#/parish-council?page=Planning">
+                    <a href="/glos#/parish-council?page=Planning" title="Link to Horsley Parish Council's Neighbourhood Plan documentation">
                         <h4>Horsley Neighbourhood Plan</h4>
                         <img src="/glos/img/horsleyNP.png" width="220">
                     </a>
@@ -130,7 +134,8 @@
 
             <div class="flex-container flex-container-row ac-main-normal-txt" style="margin-top: 50px;">
                 <div flex style="margin-top: -20px;">
-                    Many thanks to the <a href="http://ge-trust.org.uk/projects">Gloucestershire Environment Trust</a> for their support.
+                    Many thanks to the <a href="http://ge-trust.org.uk/projects"
+                title="Link to the Gloucestershire Environment Trust web site">Gloucestershire Environment Trust</a> for their support.
                 </div>
             </div>
         </div>
