--- a/public/features/common/footer.html
+++ b/public/features/common/footer.html
@@ -8,33 +8,34 @@
         </div>
         <div class="flex-container flex-container-row ac-links">
             <div class="ac-links">
-                <a href="http://www.horsley.gloucs.sch.uk/" title="Horsley Primary School">
+                <a href="http://www.horsley.gloucs.sch.uk/" title="Link to Horsley Primary School web site">
                     <img src="/glos/img/school_logo.jpg" height="110">
                 </a>
             </div>
             <div>
-                <a href="https://www.facebook.com/groups/1577802872453244/">
+                <a href="https://www.facebook.com/groups/1577802872453244/" title="link to 'Everything Horsley' Facebook page">
                     <img src="/glos/img/fb_everything_horsley.png">
                 </a>
             </div>
             <div class="ac-links">
-                <a href="https://m.facebook.com/Horsley-Community-Shop-1386629328234315/?locale2=ro_RO" title="Horsley Community Shop">
+                <a href="https://m.facebook.com/Horsley-Community-Shop-1386629328234315/?locale2=ro_RO" title="Link to Horsley Community Shop Facebook page">
                     <img src="/glos/img/fb_shop.png">
                 </a>
             </div>
             <div class="ac-links">
-                <a href="http://thehogathorsley.co.uk/" title="The Hog at Horsley">
+                <a href="http://thehogathorsley.co.uk/" title="Link to 'The Hog at Horsley' web site">
                     <span><img src="/glos/img/theHog.png" height="80"></span>
                 </a>
             </div>
             <div class="ac-links">
-                <a href="/glos#/parish-council?page=Planning" title="View the Neighbourhood Plan documents">
+                <a href="/glos#/parish-council?page=Planning" title="Link to view Horsley Parish's Neighbourhood Plan documents">
                     <img src="/glos/img/horsleyNP.png" height="110">
                 </a>
             </div>
         </div>
 
-        Please feel free to <a href="mailto:horsleywebsite@jonstride.uk">email us</a> if
+        Please feel free to <a href="mailto:horsleywebsite@jonstride.uk"
+        title="Link to send a new email to the web site administrator (opens your default mail client)">email us</a> if
         you have any enquiries about this website, or would like to add your own content.<br><br>
 
         HorsleyParish.co.uk was developed in Horsley and is supported by local volunteers.<br>
