--- a/public/features/history/history-1.html
+++ b/public/features/history/history-1.html
@@ -22,7 +22,8 @@
     </div>
     <div class="col-pad-20"/>
     <div>
-        <img src="/glos/features/history/img/27_2.jpg?" width="520px;" height="362.84444444444px;">
+        <img src="/glos/features/history/img/27_2.jpg?" width="520px;" height="362.84444444444px;"
+        title="Photograph of Horsley village, taken across the valley from the A46, circa 1907">
     </div>
 </div>
 
@@ -92,7 +93,8 @@
 
 <div class="text-content flex-container flex-container-row">
     <div>
-        <img src="/glos/features/history/img/29_1.jpg?" width="120px;" height="179.04761904762px;">
+        <img src="/glos/features/history/img/29_1.jpg?" width="120px;" height="179.04761904762px;"
+        title="Image of a couple standing in the doorway of Box Cottage, Downend, with a vegetable garden in the foreground">
     </div>
     <div class="col-pad-20"/>
     <div style="width: 720px">
