--- a/public/features/history/history-5.html
+++ b/public/features/history/history-5.html
@@ -12,7 +12,8 @@
     </div>
     <div class="col-pad-20"/>
     <div>
-        <img src="/glos/features/history/img/23_1.jpg?" width="270px;" height="199.8px;">
+        <img src="/glos/features/history/img/23_1.jpg?" width="270px;" height="199.8px;"
+        title="Photograph of St. Martin's church circa 1930">
     </div>
 </div>
 
