--- a/public/features/horsley-community-shop/shop.html
+++ b/public/features/horsley-community-shop/shop.html
@@ -22,15 +22,16 @@
         <div class="pad-r-10"><a href="https://www.facebook.com/Horsley-Community-Shop-1386629328234315/"><img src="/glos/img/facebook-icon-5.png" width="30px"></a></div>
         <div class="pad-r-10"><a href="http://facebook.us14.list-manage.com/track/click?u=fc145a24a220e556eca4e81de&id=6e68f8653e&e=5f28b4791a"><img src="/glos/img/Twitter-icon.png" width="30px"></a></div>
         <div class="pad-r-10">
-            <a href="mailto:comms@horsleyshop.co.uk">
-                <img src="/glos/img/email.png" width="30px">
+            <a href="mailto:comms@horsleyshop.co.uk" title="Link to open a new email (using your default email client) to the community shop">
+                <img src="/glos/img/email.png" width="30px" aria-label="email-icon">
             </a>
         </div>
         <div class="cs-title"></div>
         <div>
-            <h4><img src="/glos/img/phone.png" width="30px" class="pad-r-10"><b>01453 836662</b></h4>
-            <a href="https://www.google.co.uk/maps/place/Horsley+Community+Shop/@51.6802061,-2.2379494,17z/data=!4m5!3m4!1s0x0:0xb58345707bf806ae!8m2!3d51.6802061!4d-2.2357607">
-                <img src="/glos/img/map_logo.png" width="30px" class="pad-r-10">How to Find Us
+            <h4><img src="/glos/img/phone.png" width="30px" class="pad-r-10" aria-label="Phone icon"><b>01453 836662</b></h4>
+            <a href="https://www.google.co.uk/maps/place/Horsley+Community+Shop/@51.6802061,-2.2379494,17z/data=!4m5!3m4!1s0x0:0xb58345707bf806ae!8m2!3d51.6802061!4d-2.2357607"
+            title="link to google maps, showing location of Horsley community shop">
+                <img src="/glos/img/map_logo.png" aria-label="Map icon" width="30px" class="pad-r-10">How to Find Us
             </a>
         </div>
     </div>
@@ -49,9 +50,12 @@
         </div>
     </div>
     <div class="flex-container flex-container-row cs-footer">
-        <div><img src="/glos/features/horsley-community-shop/img/shop1.jpg" height="194px" class="cs-img"></div>
-        <div><img src="/glos/features/horsley-community-shop/img/shop_inside1.jpg" height="194px" class="cs-img"></div>
-        <div><img src="/glos/features/horsley-community-shop/img/sausages.jpg" height="194px" class="cs-img"></div>
+        <div><img src="/glos/features/horsley-community-shop/img/shop1.jpg" height="194px" class="cs-img"
+        title="Image of Horsley community Shop, taken from the single-track road"></div>
+        <div><img src="/glos/features/horsley-community-shop/img/shop_inside1.jpg" height="194px" class="cs-img"
+        title="Image of the inside of Horsley community shop (2016)"></div>
+        <div><img src="/glos/features/horsley-community-shop/img/sausages.jpg" height="194px" class="cs-img"
+        title="An image of a plate of 'famous Horsley sausages'"></div>
     </div>
 
 <script type="text/javascript">
