--- a/public/features/login/login.html
+++ b/public/features/login/login.html
@@ -16,7 +16,7 @@
             </div>
             <div class="form-actions">
                 <button ng-disabled="form.$invalid || lc.dataLoading" class="btn btn-default">Login</button>
-                <img ng-if="lc.dataLoading" src="" />
+                <img ng-if="lc.dataLoading" src="" aria-label="page loading icon"/>
                 <!--<a href="#/register" class="btn btn-link">Register</a>-->
             </div>
         </form>
