--- a/public/features/parish-council/parish-council-Planning.html
+++ b/public/features/parish-council/parish-council-Planning.html
@@ -20,7 +20,8 @@
                                 {{file.name}}
                             </a>
                         </div>
-                        <a href="https://drive.google.com/open?id=1CWyjXnd0OGnRIK8XVoS0vjED9TcWwJsv">HNDP 31 OCT 2019 - High Resolution (101 MB).pdf</a>
+                        <a href="https://drive.google.com/open?id=1CWyjXnd0OGnRIK8XVoS0vjED9TcWwJsv"
+                        title="Link to a high-resolution copy of the Horsley Neighbourhood Plan, stored in the cloud (101 MB)">HNDP 31 OCT 2019 - High Resolution (101 MB).pdf</a>
                     </div>
                     <div><br>Supplementary:</div>
                     <div>
