--- a/public/features/support/help.html
+++ b/public/features/support/help.html
@@ -7,7 +7,7 @@
 <body>
 
     <div style="width: 900px; margin: 0 auto;">
-        <img src="/glos/img/flatTitle.png" width="100%">
+        <img src="/glos/img/flatTitle.png" width="100%" title="A sketch of Horsley, as viewed from the valley opposite (A46)">
         <br>
         <h2 style="color: #3e8f3e">How to resolve problems viewing this site</h2>
         <div>
@@ -21,10 +21,14 @@
             <br><br>
             These links may be helpful:<br>
             <br>
-            <a href="https://support.google.com/chrome/answer/95414?co=GENIE.Platform%3DDesktop&hl=en">How to update Chrome</a><br>
-            <a href="https://support.apple.com/en-gb/HT201541">How to install teh latest software on your Mac</a><br>
-            <a href="https://support.mozilla.org/en-US/kb/update-firefox-latest-version">How to update Firefox</a><br>
-            <a href="https://www.microsoft.com/en-gb/download/internet-explorer.aspx">How to update Internet Explorer</a>
+            <a href="https://support.google.com/chrome/answer/95414?co=GENIE.Platform%3DDesktop&hl=en"
+            title="Link to a Google support page, explaining how to update Chrome browser">How to update Chrome</a><br>
+            <a href="https://support.apple.com/en-gb/HT201541"
+            title="Link to an Apple support page, explaining how to install software updates on a Mac">How to install the latest software on your Mac</a><br>
+            <a href="https://support.mozilla.org/en-US/kb/update-firefox-latest-version"
+            title="Link to a Mozilla support page, explaining how to update Firefox browser">How to update Firefox</a><br>
+            <a href="https://www.microsoft.com/en-gb/download/internet-explorer.aspx"
+            title="Link to a Microsoft support page, explaining how to update Internet Explorer">How to update Internet Explorer</a>
         </div>
     </div>
 
