--- a/public/features/village-hall/village-hall-1.html
+++ b/public/features/village-hall/village-hall-1.html
@@ -4,7 +4,8 @@
             and public events.</h2>
         <div class="text-content flex-container flex-container-row flex-cols">
             <div>
-                <img src="/glos/features/village-hall/img/vh_dancing.jpg" width="300">
+                <img src="/glos/features/village-hall/img/vh_dancing.jpg" width="300"
+                title="People dancing at a Cabaret event in the Village Hall">
             </div>
             <div>
                 <h4><b>The premises has capacity for 140 people standing and about 100 sitting. It has a fully equipped
@@ -22,23 +23,28 @@
         </div>
 
         <div class="text-content flex-container flex-container-row flex-cols">
-            <div><img src="/glos/features/village-hall/img/261_1.jpg" height="200px"></div>
-            <div><img src="/glos/features/village-hall/img/vh_rear_garden.jpg" height="200px"></div>
+            <div><img src="/glos/features/village-hall/img/261_1.jpg" height="200px"
+            title="A simple map showing the location of the village hall"></div>
+            <div><img src="/glos/features/village-hall/img/vh_rear_garden.jpg" height="200px"
+            title="A photograph of the back of the village hall, showing part of the rear garden"></div>
         </div>
         <div class="text-content flex-container flex-container-row flex-cols">
             <div>
                 <a href="/glos/features/village-hall/img/vh_kitchen.jpg">
-                    <img src="/glos/features/village-hall/img/vh_kitchen.jpg" height="200px">
+                    <img src="/glos/features/village-hall/img/vh_kitchen.jpg" height="200px"
+                    title="Photograph of the Village Hall kitchen (taken in 2017)">
                 </a>
                 </div>
             <div>
                 <a href="/glos/features/village-hall/img/vh_main_hall.jpg">
-                    <img src="/glos/features/village-hall/img/vh_main_hall.jpg" height="200px">
+                    <img src="/glos/features/village-hall/img/vh_main_hall.jpg" height="200px"
+                    title="Photograph of the Village Hall function room">
                 </a>
             </div>
             <div>
                 <a href="/glos/features/village-hall/img/setting_up.jpg">
-                    <img src="/glos/features/village-hall/img/setting_up.jpg" height="200px">
+                    <img src="/glos/features/village-hall/img/setting_up.jpg" height="200px"
+                    title="Photograph of village hall decorations and stage set-up, in preparation for an event">
                 </a>
             </div>
         </div>
