--- a/public/features/village-hall/village-hall-4.html
+++ b/public/features/village-hall/village-hall-4.html
@@ -1,6 +1,6 @@
 <div class="text-content flex-container flex-container-row">
     <div>
-        <img src="/glos/features/village-hall/img/floor_plan.jpg">
+        <img src="/glos/features/village-hall/img/floor_plan.jpg" title="Floor plan for Horsley village hall">
     </div>
 </div>
 <div class="text-content flex-container flex-container-row">
@@ -16,14 +16,16 @@
                     <hr />
                     <div class="vh-h2">Bookings</div>
                     <div><div class="vh-label">How to Book</div>
-                        <div class="value">Click the <a href="/web#/village-hall?page=3">Booking</a> tab to make a booking</div>
+                        <div class="value">Click the <a href="/web#/village-hall?page=3" title="Link to open the booking page on the Horsley Parish web site, to book the village hall">Booking</a> tab to make a booking</div>
                     </div>
                     <div><div class="vh-label">Contact telephone</div><div class="value">Karen Butt (01453 834696)</div></div>
-                    <div><div class="vh-label">Contact email</div><div class="value"><a href="mailto:Bookings@HorsleyParish.co.uk">Bookings@HorsleyParish.co.uk</a></div></div>
+                    <div><div class="vh-label">Contact email</div><div class="value"><a href="mailto:Bookings@HorsleyParish.co.uk"
+                    title="Link to send a new email to the village hall booking clerk (opens your default email client)">Bookings@HorsleyParish.co.uk</a></div></div>
                     <br />
                     <div class="vh-h2">Maintenance & Administration</div>
                     <div><div class="vh-label">Contact telephone</div><div class="value">Jon Stride (01453 834026)</div></div>
-                    <div><div class="vh-label">Contact email</div><div class="value"><a href="mailto:VHC@jonstride.co.uk">VHC@jonstride.co.uk</a></div></div>
+                    <div><div class="vh-label">Contact email</div><div class="value"><a href="mailto:VHC@jonstride.co.uk"
+                    title="Link to send a new email to the Village Hall committee (opens your default mail client)">VHC@jonstride.co.uk</a></div></div>
                     <br />
                     <div class="vh-h2">Rooms</div>
                     <div><div class="vh-label">Main Room Area(metres squared)</div><div class="value">240.0</div></div>
