--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -16,7 +16,8 @@
 			<br>
 			or immediately deploy your own instance on Heroku: 
 			<br>
-			<a href="https://heroku.com/deploy?template=https://github.com/mkbehbehani/play-heroku-seed" target="_blank"><img src="tutorial/deploy_button.png" style="display:block; margin: 2em auto;"></a>
+			<a href="https://heroku.com/deploy?template=https://github.com/mkbehbehani/play-heroku-seed" target="_blank">
+				<img src="tutorial/deploy_button.png" style="display:block; margin: 2em auto;"></a>
 			<br>
 			Please take a look at the GitHub repo as well and contribute:
 			<br>
