--- a/public/features/common/page-footer.html
+++ b/public/features/common/page-footer.html
@@ -1,6 +1,6 @@
 <div class="footer" ng-controller="navbar as nbc">
     <div class="footer-container">
-        Please feel free to <a href="mailto:horsleywebsite@jonstride.uk">email us</a> if
+        Please feel free to <a href="mailto:horsleywebsite@jonstride.uk" title="Link to send a new email to the web site administrator (opens your default mail client)">email us</a> if
         you have any enquiries about this website, or would like to add your own content.<br><br>
 
         HorsleyParish.co.uk was developed in Horsley and is supported by local volunteers.<br>
