--- a/public/features/history/history-8.html
+++ b/public/features/history/history-8.html
@@ -7,10 +7,12 @@
         <td valign="top" height="324px">
            <div style="position:relative;">
                 <div style="width:520px; height:100%; display:inline-block; position:absolute; left:0px; top:0px;">
-                <img src="/glos/features/history/img/40_1.jpg?" width="520px;" height="324.76140534872px;">
+                <img src="/glos/features/history/img/40_1.jpg?" width="520px;" height="324.76140534872px;"
+                title="Old image of Horsley post office (date unknown)">
                 </div>
                 <div style="width:220px; height:100%; display:inline-block; position:absolute; left:530px; top:0px;">
-                <img src="/glos/features/history/img/40_2.jpg?" width="220px;" height="314.01709401709px;">
+                <img src="/glos/features/history/img/40_2.jpg?" width="220px;" height="314.01709401709px;"
+                title="Boy standing outside the old post office (date unknown)">
                 </div>
            </div>
         </td>
@@ -25,7 +27,8 @@
         <td valign="top" height="468px">
            <div style="position:relative;">
                 <div style="width:720px; height:100%; display:inline-block; position:absolute; left:10px; top:0px;">
-                <img src="/glos/features/history/img/43_1.jpg?" width="720px;" height="470.46254071661px;">
+                <img src="/glos/features/history/img/43_1.jpg?" width="720px;" height="470.46254071661px;"
+                title="Old image of Horsley high street, looking up from the Bell & Castle pub">
                 </div>
            </div>
         </td>
@@ -43,7 +46,8 @@
                 <img src="/glos/features/history/img/41_1.jpg?" width="370px;" height="256.73469387755px;">
                 </div>
                 <div style="width:370px; height:100%; display:inline-block; position:absolute; left:380px; top:0px;">
-                <img src="/glos/features/history/img/41_2.jpg?" width="370px;" height="273.8px;">
+                <img src="/glos/features/history/img/41_2.jpg?" width="370px;" height="273.8px;"
+                title="Elderly couple standing outside the old shop">
                 </div>
            </div>
         </td>
@@ -58,7 +62,8 @@
         <td valign="top" height="466px">
            <div style="position:relative;">
                 <div style="width:720px; height:100%; display:inline-block; position:absolute; left:10px; top:0px;">
-                <img src="/glos/features/history/img/42_1.jpg?" width="720px;" height="466.50737877723px;">
+                <img src="/glos/features/history/img/42_1.jpg?" width="720px;" height="466.50737877723px;"
+                title="The unveiling of Horsley war memorial on the 17th July 1921">
                 </div>
            </div>
         </td>
@@ -73,7 +78,8 @@
         <td valign="top" height="280px">
            <div style="position:relative;">
                 <div style="width:370px; height:100%; display:inline-block; position:absolute; left:185px; top:0px;">
-                <img src="/glos/features/history/img/44_1.jpg?" width="370px;" height="280.60055865922px;">
+                <img src="/glos/features/history/img/44_1.jpg?" width="370px;" height="280.60055865922px;"
+                title="Old photograph taken outside the pub, looking down the street">
                 </div>
            </div>
         </td>
