--- a/public/features/village-hall/village-hall-3.html
+++ b/public/features/village-hall/village-hall-3.html
@@ -4,7 +4,8 @@
         <br>
         <div class="row">
             We will be introducing an on-line booking calendar/diary shortly.
-            In the meantime, if you wish to book the hall then please contact Karen Butt (<a href="mailto:bookings@horsleyparish.co.uk">bookings@horsleyparish.co.uk</a>).
+            In the meantime, if you wish to book the hall then please contact Karen Butt (<a href="mailto:bookings@horsleyparish.co.uk"
+        title="Link to send a new email to the village hall booking clerk (opens your default mail client)">bookings@horsleyparish.co.uk</a>).
         </div>
     </div>
 </div>
