Change hog link

--- a/public/features/common/footer.html
+++ b/public/features/common/footer.html
@@ -3,7 +3,7 @@
         <div>
             <b>Site Map:</b><br>
             - <span ng-repeat="link in fd.links">
-                <a href="glos#{{link.link}}">{{link.heading}} -</a>
+                <a href="glos#{{link.link}}" title="Link to {{link.heading}} page">{{link.heading}} -</a>
             </span>
         </div>
         <div class="flex-container flex-container-row ac-links">
@@ -23,7 +23,7 @@
                 </a>
             </div>
             <div class="ac-links">
-                <a href="http://thehogathorsley.co.uk/" title="Link to 'The Hog at Horsley' web site">
+                <a href="http://www.hoghorsley.com/" title="Link to 'The Hog at Horsley' web site">
                     <span><img src="/glos/img/theHog.png" height="80"></span>
                 </a>
             </div>
