--- a/public/features/parish-council/parish-council-documents.html
+++ b/public/features/parish-council/parish-council-documents.html
@@ -26,6 +26,12 @@
             <div>
                 <p>Click a year to view financial reports for the period</p>
             </div>
+            <h4><a ng-click="pcc.toggle_showFR2023()">2022-23</a></h4>
+            <div ng-if="pcc.showFR2023 && pcc.FR2023.length > 0" ng-repeat="file in pcc.FR2023">
+                <a href="https://drive.google.com/file/d/{{file.id}}/view">{{file.name}}</a>
+            </div>
+            <div ng-if="pcc.showFR2023 && pcc.FR2023.length === 0">No 2022-23 documents to display at present.</div>
+
             <h4><a ng-click="pcc.toggle_showFR2022()">2021-22</a></h4>
             <div ng-if="pcc.showFR2022 && pcc.FR2022.length > 0" ng-repeat="file in pcc.FR2022">
                 <a href="https://drive.google.com/file/d/{{file.id}}/view">{{file.name}}</a>
